2013-03-30  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_tcpdemux.cpp (scan_tcpdemux): added -S tcp_timeout 

2013-03-03  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_netviz.cpp (scan_netviz): scan_netviz enabled by default

2013-02-27  Simson Garfinkel  <simsong@Mucha.local>

	* configure.ac: added /usr/boost/include to search path

2013-01-27  Simson Garfinkel  <simsong@FC17>

	* src/tcpdemux.cpp (close_all_fd): now calls close_file(false), to preven openflows from being modified while it is being iterated.

	* src/tcpflow.h: removed SET_BIT as it wasn't being used

	* configure.ac: removed bcopy & bzero

2013-01-26  Simson Garfinkel  <simsong@npsair.local>

2013-01-08  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/scan_netviz.cpp (th_shutdown): th_one_page is now lazily created and destroyed at end

2013-01-03  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpflow.cpp (main): opt_gzip_decompress renamed to gzip_decompress and implemented.

	* src/flow.cpp (flow::new_filename): now automatically makes subdirectories if necessary

2013-01-02  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/scan_http.cpp: zero-length attachments are no longer created on disk.

	* src/tcpip.cpp (tcpip::store_packet): zero-length flows are no longer created on disk.

2012-12-27  Simson Garfinkel  <simsong@Mucha.local>

	* renamed stored_flow as saved_flow becuase they are all stored, but only some are saved in the ring bufer.

	* src/tcpdemux.cpp (tcpdemux::close_all): renamed close_all_fd(). close_tcpip renamed close_tcpip_fd; close_oldest renamed close_oldest_fd()
	(tcpdemux::remove_all_flows): renamed.

2012-12-24  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpip.h (class flow): removed connection_count from flow identifier becuase it cannot be derrived from the flow. We really should have the LSN as part of the flow or something. The connection_count will be found when the filename is made.

2012-12-23  Simson Garfinkel  <simsong@Mucha.local>
